# doki

./: Cargo.toml
compiler/: Cargo.toml
compiler/src/: gen_c.rs  lib.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: gen_c.rs  intrinsics.rs  lib.rs
crates/doki-ir/: Cargo.toml
crates/doki-ir/src/: ast_step1.rs  ast_step2.rs  codegen.rs  collector.rs  id_generator.rs  intrinsics.rs  ir2.rs  lib.rs  scc.rs  tail_recursion_elimination.rs  util.rs
crates/doki-ir/src/ast_step1/: padded_type_map.rs
crates/doki-ir/src/ast_step1/padded_type_map/: minimize.rs
crates/doki-ir/src/ast_step2/: c_type.rs  intrinsic_debug.rs  local_variable.rs  type_converter.rs  type_memo.rs  union_find.rs
crates/doki-ir/src/codegen/: c_type.rs  collector.rs  intrinsic_debug.rs
crates/doki-ir/src/ir1/: padded_type_map.rs
crates/doki-ir/src/ir1/padded_type_map/: minimize.rs
crates/doki-ir/src/ir2/: c_type.rs  intrinsic_debug.rs  local_variable.rs  type_converter.rs  type_memo.rs  union_find.rs
crates/doki-ir/src/util/: collector.rs  dfa_minimization.rs  id_generator.rs
crates/language-server/: Cargo.toml
crates/language-server/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
doki/: Cargo.toml
doki-ir/: Cargo.toml
doki-ir/src/: ast_step1.rs  ast_step2.rs  codegen.rs  id_generator.rs  intrinsics.rs  lib.rs
doki-ir/src/ast_step1/: padded_type_map.rs
doki-ir/src/ast_step2/: type_memo.rs
doki-ir/src/codegen/: c_type.rs
doki/src/: ast_step1.rs  ast_step2.rs  codegen.rs  intrinsics.rs
doki/src/codegen/: collector.rs
examples/: bin_tree.doki  bin_tree.ofl  closure.doki  fn_union.doki  global_variables.doki  helloworld.doki  helloworld.ofl  literal_pattern.doki  match.doki  match.ofl  mut.doki  oo.doki  red_black_tree.doki  red_black_tree.ofl  simple.doki  taut.doki
language-server/src/: lib.rs
parser/src/: lib.rs
src/: gen_c.rs  intrinsics.rs  main.rs  parse.rs  run_c.rs
tests/: test.rs
tests/fail/: inexhaustive_match.doki
tests/negative/: dead_function.doki  global_order.doki  not_a_function.doki
tests/positive/: boxed_ctx.doki  diverging_struct.doki  dummy_fn_in_dummy_fn.doki  expr.doki  fib.doki  fib.exp  fixed_point_fib.doki  fixed_point_fib_lambda.doki  fixed_point_lambda_prime.doki  fixed_point_prime.doki  function_table.doki  global_mut.doki  global_order.doki  incomplete_parser.doki  memcpy.doki  mod2.doki  mod3.doki  mut_list.doki  oo.doki  prime.doki  prime_table.doki  prime_table_deletion.doki  prime_table_global_init.doki  prime_table_global_mut.doki  prime_table_mut.doki  recursive_env.doki  type_caching.doki  type_converter.doki  variable_scope.doki
tests/positive/benchmarksgame/: nbody.doki
tests/success/: mut_list.doki  recursive_env.doki  variable_scope.doki
(+8 files in other folders)
