[package]
name = "doki"
version = "0.1.0"
edition = "2021"

[workspace]
default-members = ["."]
members = [".", "doki-ir", "parser", "compiler"]

[profile.release]
debug = true

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
compiler = { path = "compiler" }
tempfile = "3.5.0"

[dev-dependencies]
assert_cmd = "2.0.4"
