[package]
name = "doki"
version = "0.1.0"
edition = "2021"

[workspace]
default-members = ["."]
members = [".", "crates/*"]

[profile.release]
debug = true

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
compiler = { path = "crates/compiler" }
tempfile = "3.5.0"
language-server = { path = "crates/language-server", optional = true }

[dev-dependencies]
assert_cmd = "2.0.4"

[features]
display-fn-id = [ "compiler/display-fn-id" ]
