[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
doki-ir = { path = "../doki-ir" }
parser = { path = "../parser" }
rustc-hash = "1.1.0"
easy-ext = "1.0.1"
multimap = "0.9.0"
itertools = "0.12.0"
typed-arena = "2.0.2"

[features]
display-fn-id = ["doki-ir/display-fn-id"]
print-unused-global-variables = ["doki-ir/print-unused-global-variables"]
