[package]
name = "doki-ir"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.11.0"
rustc-hash = "1.1.0"
stripmargin = "*"
strum = { version = "0.25.0", features = ["derive"] }
once_cell = "1.8.0"
unic-ucd-category = "0.9.0"
multimap = "0.9.0"
smallvec = "1.11.0"

[features]
default = []
display-fn-id = []
