[package]
name = "doki-ir"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.12.0"
rustc-hash = "1.1.0"
stripmargin = "*"
strum = { version = "0.26.1", features = ["derive"] }
once_cell = "1.8.0"
unic-ucd-category = "0.9.0"
multimap = "0.10.0"
smallvec = "1.11.0"
owo-colors = "4.0.0"
log = "0.4.19"
petgraph = "0.6.4"

[features]
default = []
display-fn-id = []
print-unused-global-variables = []
